# tiny_gnupg

./: .gitignore  CHANGES.md  CHANGES.rst  LICENSE  MANIFEST.in  PREADME.rst  README.rst  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: -issue-severity---issue-name---issue-type---version-.md  bug-report.md  bug_report.md
.github/workflows/: pythonpackage.yml
tests/: _home_mon_Documents_coding_git_tiny_gnupg_tiny_gnupg_tiny_gnupg_py.html  test_tiny_gnupg.py
tests/htmlcov/: _home_mon_Documents_coding_git_tiny_gnupg_tiny_gnupg___init___py.html  _home_mon_Documents_coding_git_tiny_gnupg_tiny_gnupg_tiny_gnupg_py.html  status.json  test_tiny_gnupg_py.html
tiny_gnupg/: __init__.py  tiny_gnupg.py
tiny_gnupg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tiny_gnupg/gpghome/: gpg2.conf
