[metadata]
name = tiny_gnupg
license_file = LICENSE
description-file = README.rst
download_url = https://pypi.org/project/tiny-gnupg/
project_urls =
    Source = https://github.com/rmlibre/tiny_gnupg
    Tracker = https://github.com/rmlibre/tiny_gnupg/issues
    Changelog = https://github.com/rmlibre/tiny_gnupg/blob/master/CHANGES.rst
    Documentation = https://github.com/rmlibre/tiny_gnupg/blob/master/README.rst

[flake8]
exclude = tests/*
max-complexity = 15
max-line-length = 76

[tool:pytest]
testpaths = tests
doctest_optionflags = IGNORE_EXCEPTION_DETAIL ELLIPSIS
addopts =
    --verbose
    --ignore=setup.py
    --ignore=tiny_gnupg/gpghome/*
